<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:padding="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="John Doe"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/crossImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_close_black_24dp"
        android:alpha="0.5"
        android:contentDescription="@string/cross_image_content_description" />

    <TextView
        android:id="@+id/registrationNumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/registration_no"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/registrationNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100145"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintLeft_toRightOf="@id/registrationNumTitle"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registrationNumTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/email"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registrationNumTitle"
        app:layout_constraintLeft_toRightOf="@id/emailTitle"
        tools:text="john@gmail.com"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/phone"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="01559541265"
        app:layout_constraintTop_toBottomOf="@id/emailTitle"
        app:layout_constraintLeft_toRightOf="@id/phoneTitle"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

</android.support.constraint.ConstraintLayout>