<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hellohasan.fourteenthclass.Features.ShowStudentList.StudentListActivity"
    tools:showIn="@layout/activity_student_list"
    android:padding="8dp">

    <TextView
        android:id="@+id/studentCountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/student_count"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/studentCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/studentCountTitle"
        app:layout_constraintLeft_toRightOf="@id/studentCountTitle"
        tools:text="3"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/subjectCountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/studentCountTitle"
        app:layout_constraintRight_toLeftOf="@+id/subjectCountTextView"
        android:text="@string/subject_count"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/subjectCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/subjectCountTitle"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="8"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/studentRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/studentCountTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/emptyStudentListTextView"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_student_list_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
